# aws-robomaker-sample-application-heartbeat

robot_ws/src/hello_world_robot/: CMakeLists.txt  package.xml
robot_ws/src/hello_world_robot/launch/: start.launch
robot_ws/src/hello_world_robot/nodes/: arm64.pem  start
