<?xml version="1.0"?>
<package format="2">
  <name>hello_world_robot</name>
  <version>1.2.0</version>
  <description>
    Basic ROS Application
  </description>
  <license>MIT</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
